--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
-{ 
-    "version": 2, 
-    "builds":
-    [
+{
+    "version": 2,
+    "builds": [
         {
-            "src":"*.js",
-            "use":"@vercel/node"
+            "src": "index.js",
+            "use": "@vercel/node"
         }
     ],
-    "routes": [{ "src": "/(.*)", "dest": "/" }] }
+    "routes": [
+        { "src": "/(.*)", "dest": "index.js" }
+    ]
+}
